--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
