--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.7",
-    "bs58": "^5.0.0",
+    "bs58": "^4.0.1",
+    "drizzle-orm": "^0.28.6",
     "next": "14.2.3",
     "pg": "^8.16.3",
     "react": "18.2.0",
