--- a/package.json
+++ b/package.json
@@ -9,26 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.2",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.91.7",
-    "bs58": "^4.0.1",
-    "drizzle-orm": "^0.28.6",
-    "next": "14.2.3",
-    "pg": "^8.16.3",
-    "qrcode.react": "^1.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@neondatabase/serverless": "^0.9.0",
+    "@solana/web3.js": "^1.95.0",
+    "@solana/wallet-adapter-keystone": "^0.1.19",
+    "drizzle-orm": "^0.35.0",
+    "next": "14.2.5",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
+  },
+  "overrides": {
+    "qrcode.react": {
+      "react": "$react"
+    }
   }
 }
