--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "drizzle-orm": "^0.33.0",
+    "mysql2": "^3.15.3",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
