--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@solana/web3.js": "^1.95.3",
     "bignumber.js": "^9.3.1",
     "drizzle-orm": "^0.33.0",
-    "mysql2": "^3.15.3",
     "next": "14.2.5",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
