--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/auto-sell",
-      "schedule": "0 0 * * *"
+      "schedule": "*/2 * * * *"
     }
   ]
 }
