Add live arbitrage scanner with cron and UI integration

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/auto-sell",
       "schedule": "*/2 * * * *"
+    },
+    {
+      "path": "/api/cron/scanner",
+      "schedule": "*/2 * * * *"
     }
   ]
 }
